first data.random_emojis test

--- a/Pipfile
+++ b/Pipfile
@@ -3,12 +3,17 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[[source]]
+url = "https://test.pypi.org/simple/"
+verify_ssl = true
+name = "testpypi"
+
 [packages]
 coverage = "*"
 twine = "*"
 build = "*"
 pytest = "*"
-emojiguessr = {file = ".", editable = true}
+emojiguessr = {version = "==0.0.1", index = "testpypi"}
 
 [dev-packages]
 
