--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: CI / CD
+name: CI
 on: [pull_request]
 jobs:
   build:
@@ -21,20 +21,3 @@ jobs:
           pipenv install pytest
           pipenv --venv
           pipenv run python -m pytest
-  # deliver:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 5
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Install Python, pipenv and Pipfile packages
-  #       uses: kojoru/prepare-pipenv@v1
-  #     - name: Build package
-  #       run: |
-  #         pipenv install build
-  #         pipenv run python -m build .
-  #     - name: Publish to PyPI test server
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-  #         repository-url: https://test.pypi.org/legacy/
